# CryoSoOp

./: .gitignore  LICENSE  README.md
DataCollection/: .gitattributes  .gitignore  CMakeLists.txt  README.md
DataCollection/config/: SCHEMA.md  radiometer_B210.yaml  site.env  site_Brundage.env  site_CSSL.env
DataCollection/orchestration/: bbb_set_state.sh  probe_nvme.sh  radiometer_run.sh
DataCollection/src/: main.cpp  radiometer_driver.cpp  radiometer_driver.hpp
DataCollection/src/common/: config.cpp  config.hpp  dat_writer.cpp  dat_writer.hpp  event_log.cpp  event_log.hpp  ring.cpp  ring.hpp  run_control.cpp  run_control.hpp  summary.cpp  summary.hpp  types.hpp
DataCollection/src/device/: rf_control.cpp  rf_control.hpp  usrp_session.cpp  usrp_session.hpp
DataCollection/tests/: test_time_stamps.cpp
DataCollection/tools/: validate_output.py  yaml_compat.py
Processing/: BrundageSoOp.m  README.md  run_BrundageSoOp.sh  site_config.json  site_config_CSSL.json  soop_run_pipeline.m  soop_setup_paths.m
Processing/docs/: config-reference.md
Processing/lib/: BrundageSoOp_fun.m  session_key.m  sigma0_math.m  soop_specular_track.m
Processing/rfi/: rfi_env_window.m  rfi_excise.m  rfi_prepare_bands.m  rfi_propose_bands.m
Processing/stages/: compare_sat_candidates.m  compute_L1.m  compute_L2.m  compute_calib.m  compute_rfi_spectrum.m  compute_sigma0.m  compute_snr.m
Processing/tests/: chain_session_test.m  rfi_env_window_test.m  rfi_excise_test.m  rfi_propose_bands_test.m  sigma0_geometry_test.m  sigma0_pipeline_test.m  specular_track_test.m  viewer_freeze_bands_test.m  viewer_phase_offset_test.m  viewer_swe_phaseline_test.m  viewer_tod_filter_test.m
Processing/tools/: find_overflows.m  make_muos_elevation.py
Processing/viewer/: BrundageSoOp_viewer.m  SoopViewerState.m  soop_viewer_callbacks.m  soop_viewer_catalog.m  soop_viewer_data.m  soop_viewer_layout.m  soop_viewer_render_calib.m  soop_viewer_render_l1.m  soop_viewer_render_l2.m  soop_viewer_render_raw.m  soop_viewer_render_rfi.m  soop_viewer_render_sigma0.m  soop_viewer_util.m
